<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Untrusted</string>
    <string name="pl_cancel">Cancel</string>
    <string name="pl_confirm">Confirm</string>
    <string name="pl_confirm_pattern">Draw the pattern again to confirm</string>
    <string name="pl_continue">Continue</string>
    <string name="pl_draw_pattern">Draw an unlock pattern</string>
    <string name="pl_draw_pattern_to_unlock">Draw pattern to unlock</string>
    <string name="pl_draw_old_pattern_to_unlock">Draw old pattern to set New Lock</string>
    <string name="pattern_Success">Please wait</string>
    <string name="pl_forgot_pattern">Forgot pattern</string>
    <string name="pl_pattern_confirmed">Your new unlock pattern</string>
    <string name="pl_pattern_recorded">Pattern recorded</string>
    <string name="pl_pattern_too_short">Connect at least %d dots, please redraw</string>
    <string name="pl_recording_pattern">Release finger when done</string>
    <string name="pl_redraw">Redraw</string>
    <string name="pl_wrong_pattern">Wrong pattern, please try again</string>

    <string name="pl_access_pattern_start">Pattern started</string>
    <string name="pl_access_pattern_cleared">Pattern cleared</string>
    <string name="pl_access_pattern_cell_added">Cell added</string>
    <string name="pl_access_pattern_cell_added_verbose">Cell <xliff:g example="3" id="cell_index">%1$d</xliff:g> added</string>
    <string name="pl_access_pattern_detected">Pattern completed</string>
    <string name="pl_access_pattern_area">Pattern area.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab1">Protect My Apps</string>
    <string name="tab2">Do Not Disturb</string>
    <string name="AppName">App-Protector</string>
    <string name="font_roboto">Roboto-Thin.ttf</string>
    <string name="font_toxic">toxic.ttf</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

    <!--
    Preference Theme
    -->
    <string name="theme_text">Set Red/Green Theme</string>
    <string name="theme_title">Change Theme</string>
    <string name="chnage_Pattern">Change Pattern</string>
    <string name="chnage_app_Lock">Change App Lock</string>
    <string name="theme_block_title">Blocked/Protected Contents</string>
    <string name="pref_block_txt">Blocked Applications</string>
    <string name="pref_protect_txt">Blocked Contacts for Calling</string>



    <!--ViewPager Enum Colors-->
    <string name="red">RED</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="title_activity_getting_started">App Protector</string>
</resources>
