<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <app.untrusted.activity.MyPreferenceCategory android:title="@string/chnage_app_Lock">
        <Preference
            android:enabled="true"
            android:key="changeLock"
            android:selectable="true"
            android:title="@string/chnage_Pattern" />
    </app.untrusted.activity.MyPreferenceCategory>


    <app.untrusted.activity.MyPreferenceCategory android:title="Security">
        <CheckBoxPreference
            android:layout_width="match_parent"
            android:key="SwitchSecurity"
            android:selectable="true"
            android:summary="Administrative permission"
            android:title="Make App Unistallable without Security"/>

    </app.untrusted.activity.MyPreferenceCategory>

    <app.untrusted.activity.MyPreferenceCategory android:title="@string/theme_block_title">
        <Preference
            android:enabled="true"
            android:key="app"
            android:selectable="true"
            android:title="@string/pref_block_txt" />

        <Preference
            android:enabled="true"
            android:key="call"
            android:selectable="true"
            android:title="@string/pref_protect_txt" />
    </app.untrusted.activity.MyPreferenceCategory>


</PreferenceScreen>

